--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
       .box {
         width: 70px;
         height: 70px;
-        background-color: teal;
+        background-color: rgb(21, 250, 5);
         font-size: 300%;
         text-align: center;
         user-select: none;
@@ -69,7 +69,7 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
+       var positionX =-0;
 
 
 
@@ -80,7 +80,8 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
+          positionX = positionX + 10
+          moveBoxTo(150);
         
 
           
