--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -81,7 +82,7 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-          moveBoxTo(postionX);
+          moveBoxTo(positionX);
           positionX = positionX + speed;
           if (positionX > boardWidth) {
             speed = speed * -1;
